--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -652,11 +652,18 @@ body {
     0 0 160px 50px rgba(20, 90, 255, 0.04);
 }
 
-.map-controls-br {
+.map-controls-bl {
   position: absolute;
   bottom: 110px;
-  right: 9px;
+  left: 17px;
   z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+.map-rotation-controls {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -668,17 +675,6 @@ body {
 }
 .map-controls-collapse-btn:hover {
   opacity: 1;
-}
-
-.map-controls-bl {
-  position: absolute;
-  bottom: 110px;
-  left: 17px;
-  z-index: 10;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 8px;
 }
 
 .map-recenter-btn,
